force-app/main/default/objects/Product2/fields/Available_ZipCodes__c.field-meta.xml
<CustomField>
    <fullName>Available_ZipCodes__c</fullName>
    <description>Zip Codes available for the branch</description>
    <label>Available ZipCodes</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>