force-app/main/default/objects/Product2/fields/DupCatcher__c.field-meta.xml
<CustomField>
    <fullName>DupCatcher__c</fullName>
    <label>DupCatcher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>