force-app/main/default/objects/Product2/fields/Exclude_Zip_Codes__c.field-meta.xml
<CustomField>
    <fullName>Exclude_Zip_Codes__c</fullName>
    <label>Exclude Zip Codes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>