force-app/main/default/objects/Product2/fields/Hot_Lead_Model__c.field-meta.xml
<CustomField>
    <fullName>Hot_Lead_Model__c</fullName>
    <label>Hot Lead Model</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Old Data no nuCard</fullName>
            </value>
            <value>
                <fullName>Old Data nuCard</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>