force-app/main/default/objects/Product2/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry</label>
    <referenceTo>Industry__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>