force-app/main/default/objects/Product2/fields/NuCard_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>NuCard_Unit_Price__c</fullName>
    <label>NuCard Unit Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>