force-app/main/default/objects/Product2/fields/OB_Campaign_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>OB_Campaign_Unit_Price__c</fullName>
    <label>OB Campaign Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>