force-app/main/default/objects/Product2/fields/Out_Bound_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Out_Bound_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Out Bound Eligible</label>
    <type>Checkbox</type>
</CustomField>