force-app/main/default/objects/Product2/fields/Porch_Pro_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Porch_Pro_Unit_Price__c</fullName>
    <label>Porch Pro Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>