force-app/main/default/objects/Product2/fields/Prime_Front_Card__c.field-meta.xml
<CustomField>
    <fullName>Prime_Front_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prime Front Card</label>
    <type>Checkbox</type>
</CustomField>