force-app/main/default/objects/Product2/fields/Product_Branch__c.field-meta.xml
<CustomField>
    <fullName>Product_Branch__c</fullName>
    <formula>Product_State__c +&apos;-&apos;+ Product_City__c</formula>
    <label>Product_Branch</label>
    <type>Text</type>
</CustomField>