force-app/main/default/objects/Product2/fields/Product_City__c.field-meta.xml
<CustomField>
    <fullName>Product_City__c</fullName>
    <formula>IF( 
CONTAINS(RIGHT(Name,LEN(Name) - FIND(&quot;-&quot;, Name)), &quot;-&quot;), 
LEFT(RIGHT(Name,LEN(Name) - FIND(&quot;-&quot;, Name)  ), FIND(&quot;-&quot;, RIGHT(Name,LEN(Name) - FIND(&quot;-&quot;, Name)  ))-1  ), 
IF(CONTAINS(Name,&quot;-&quot;),RIGHT(Name,(Len(Name)-FIND(&quot;-&quot;, Name))) , &apos;&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product City</label>
    <type>Text</type>
</CustomField>