force-app/main/default/objects/Product2/fields/Product_Industry__c.field-meta.xml
<CustomField>
    <fullName>Product_Industry__c</fullName>
    <label>Product Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Air Duct Cleaning</fullName>
            </value>
            <value>
                <fullName>Appliance Store</fullName>
            </value>
            <value>
                <fullName>Auto Repair</fullName>
            </value>
            <value>
                <fullName>Awnings</fullName>
            </value>
            <value>
                <fullName>Blinds/Shutters</fullName>
            </value>
            <value>
                <fullName>Cable/Satellite TV/Internet</fullName>
            </value>
            <value>
                <fullName>Carpet/Tile Cleaning</fullName>
            </value>
            <value>
                <fullName>Chimney Sweep</fullName>
            </value>
            <value>
                <fullName>Chiropractor</fullName>
            </value>
            <value>
                <fullName>Closet Organizing/Garage Shelving</fullName>
            </value>
            <value>
                <fullName>Computer Repair</fullName>
            </value>
            <value>
                <fullName>Day/Med Spas</fullName>
            </value>
            <value>
                <fullName>Day Care Provider/Pre-School</fullName>
            </value>
            <value>
                <fullName>Deck/Patio Build</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Disaster Recovery</fullName>
            </value>
            <value>
                <fullName>Dog Grooming/Boarding</fullName>
            </value>
            <value>
                <fullName>Electrician</fullName>
            </value>
            <value>
                <fullName>Energy Audit/Radiant Barrier/Insulation</fullName>
            </value>
            <value>
                <fullName>Fencing</fullName>
            </value>
            <value>
                <fullName>Fireplaces</fullName>
            </value>
            <value>
                <fullName>Flooring/Carpeting</fullName>
            </value>
            <value>
                <fullName>Garage Doors</fullName>
            </value>
            <value>
                <fullName>Granite/Marble</fullName>
            </value>
            <value>
                <fullName>Gutters</fullName>
            </value>
            <value>
                <fullName>Hair Salons/Barber</fullName>
            </value>
            <value>
                <fullName>Handyman</fullName>
            </value>
            <value>
                <fullName>Health Insurance</fullName>
            </value>
            <value>
                <fullName>Home Entertainment</fullName>
            </value>
            <value>
                <fullName>Home Protection/Warranty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>