force-app/main/default/objects/Product2/fields/Product_Industry_LU__c.field-meta.xml
<CustomField>
    <fullName>Product_Industry_LU__c</fullName>
    <formula>SUBSTITUTE(Name,  Product_Branch__c +&apos;-&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_Industry</label>
    <type>Text</type>
</CustomField>