force-app/main/default/objects/Product2/fields/Product_State__c.field-meta.xml
<CustomField>
    <fullName>Product_State__c</fullName>
    <formula>LEFT(Name,(FIND(&quot;-&quot;, Name)-1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product_State</label>
    <type>Text</type>
</CustomField>