force-app/main/default/objects/Product2/fields/Purchasing_Unit__c.field-meta.xml
<CustomField>
    <fullName>Purchasing_Unit__c</fullName>
    <label>Purchasing Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>list units of measure setup in Intacct</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>