force-app/main/default/objects/Product2/fields/Ratio_to_PO_Standard__c.field-meta.xml
<CustomField>
    <fullName>Ratio_to_PO_Standard__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Ratio to PO Standard</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>