force-app/main/default/objects/Product2/fields/Standard_Unit__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit__c</fullName>
    <label>Standard Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>list units of measure setup in Intacct</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>