force-app/main/default/objects/Product2/fields/Survey_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Survey_Unit_Price__c</fullName>
    <label>Survey Unit Price</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>