force-app/main/default/objects/Product2/fields/Zip_Codes__c.field-meta.xml
<CustomField>
    <fullName>Zip_Codes__c</fullName>
    <label>Zip Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>35004</fullName>
            </value>
            <value>
                <fullName>35005</fullName>
            </value>
            <value>
                <fullName>35007</fullName>
            </value>
            <value>
                <fullName>35020</fullName>
            </value>
            <value>
                <fullName>35022</fullName>
            </value>
            <value>
                <fullName>35023</fullName>
            </value>
            <value>
                <fullName>35040</fullName>
            </value>
            <value>
                <fullName>35043</fullName>
            </value>
            <value>
                <fullName>35051</fullName>
            </value>
            <value>
                <fullName>35061</fullName>
            </value>
            <value>
                <fullName>35062</fullName>
            </value>
            <value>
                <fullName>35064</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>