force-app/main/default/objects/Product2/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Industry__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>