force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Industry__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.DESCRIPTION</field>
        <operation>contains</operation>
        <value>Gift card printed and</value>
    </filters>
    <label>Subscription Products</label>
</ListView>