force-app/main/default/objects/Product2/listViews/Hot_Leads.listView-meta.xml
<ListView>
    <fullName>Hot_Leads</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Industry__c</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.CREATED_DATE</columns>
    <columns>PRODUCT2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>contains</operation>
        <value>Old,Primary,Secondary</value>
    </filters>
    <label>Hot Leads</label>
</ListView>